<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.java.jinput</groupId>
  <artifactId>jinput-parent</artifactId>
  <version>2.0.10-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>JInput</name>
  <description>Library for access to input devices.</description>
  <url>https://github.com/umjammer/jinput</url>
  <licenses>
    <license>
      <name>BSD</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>Members</id>
      <url>https://github.com/umjammer/jinput/graphs/contributors</url>
    </developer>
  </developers>
  <scm>
    <url>https://github.com/umjammer/jinput.git</url>
    <connection>scm:git:https://github.com/umjammer/jinput.git</connection>
    <developerConnection>scm:git:https://github.com/umjammer/jinput.git</developerConnection>
  </scm>

  <modules>
    <module>coreAPI</module>
    <module>plugins</module>
    <module>applet</module>
<!--
    <module>uberjar</module>
-->
    <module>examples</module>
    <module>tests</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
            <showDeprecation>true</showDeprecation>
            <showWarnings>true</showWarnings>
            <compilerArgs>
              <arg>-Werror</arg>
              <arg>-Xlint:all,-options</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <archive>
              <manifestEntries>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.4.1</version>
          <configuration>
            <additionalOptions>-Xdoclint:none</additionalOptions>
          </configuration>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <phase>package</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.java.jutils</groupId>
        <artifactId>jutils</artifactId>
        <version>1.0.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
